--- a/final_pro_Work.html
+++ b/final_pro_Work.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <title>A+ Fitness Workouts</title>
@@ -24,14 +24,98 @@
         </nav>
     </header>
     <main>
+        <div class="hro">
+            <img src="images/gym2.jpg" alt="gym">
+        </div>
+        <div class="inf">
+            <h2>What and how much should I do?</h2>
+            <p>To start out it is a good idea to get a 1 rep max so you know how much weigt to lift for the main lifts, bench squat, deadlift, etc. For lifts like curls, or lateral raises, find a weight that you can get at least 6 reps with. If you can easily
+                do 8 get more weight. once you find that for a while do 8 Reps at 70% 6 Reps at 75% 5 Reps at 80% and 4 Reps at 85%. After you have done that for a while, or it gets easy do 5 reps at 80% 4 reps at 85% 3 reps at 90% and 2 reps at 95%.
+                After you do that for a while re-max and start from the beggining again.</p>
+            <p>If you need something to calculate your percentages, visit the calculator page. Below is an example workout. It is simple and can be good for anyone. However everyone is different and it mmay not work as good for some. This is just an example.
+                You can create your own workout from the list below if you wish!</p>
+        </div>
         <div class="work">
             <div>
-                <h2>Workout 1</h2>
-                <p>5 Days a week, MWF Chest Shoulders, Triceps, TT Legs, Back, Biceps <br> MWF Chest: Bench Press, Incline Dumbell Bench, Decline Bench</p>
+                <h2>Example Workout</h2>
+                <p>5 Days a week, MWF Chest Shoulders, Triceps, TT Legs, Back, Biceps</p>
+                <p>MWF</p>
+                <p>Chest: Bench Press, Incline Dumbell Bench, Decline Bench</p>
+                <p>Shoulders: Shoulder Press, Lateral Raises, Side Lateral Raises</p>
+                <p>Triceps: Tricep Pull Downs, Dips, Skull Crushers</p>
+                <p>TT</p>
+                <p>Legs: Squats, Deadlifts, Leg Press</p>
+                <p>Back: Lat Pulldown, Rows, Pull Ups</p>
+                <p>Biceps: Chin Ups, Dumbell Curls, Hammer Curls</p>
             </div>
-            <div>
-                <h2>Workout 2</h2>
-                <p></p>
+        </div>
+        <div class="ex">
+            <h2 class="hd">Exercises</h2>
+            <div class="box1 bx">
+                <h2>Chest</h2>
+                <ul>
+                    <li>Bench</li>
+                    <li>Flys</li>
+                    <li>Incline Bench</li>
+                    <li>Decline Bench</li>
+                    <li>Push Ups</li>
+                    <li>Chest Press</li>
+                </ul>
+            </div>
+            <div class="box2 bx">
+                <h2>Shoulders</h2>
+                <ul>
+                    <li>Side Lateral Raises</li>
+                    <li>Front lateral Raises</li>
+                    <li>Shoulder Press</li>
+                    <li>Shrugs</li>
+                    <li>Dumbell Press</li>
+                    <li>Barbell Overhead Press</li>
+                </ul>
+            </div>
+            <div class="box3 bx">
+                <h2>Triceps</h2>
+                <ul>
+                    <li>Dips</li>
+                    <li>Tricep Extensions</li>
+                    <li>Skull Crusshers</li>
+                    <li>Tricep Push Downs</li>
+                    <li>Diamond Push Ups</li>
+                    <li>Tricep Kickbacks</li>
+                </ul>
+            </div>
+            <div class="box4 bx">
+                <h2>Legs</h2>
+                <ul>
+                    <li>Deadlift</li>
+                    <li>Squat</li>
+                    <li>Leg Press</li>
+                    <li>Lunges</li>
+                    <li>Cleans</li>
+                    <li>Leg Curls</li>
+                </ul>
+            </div>
+            <div class="box5 bx">
+                <h2>Back/Lats</h2>
+                <ul>
+                    <li>Pull Ups</li>
+                    <li>Lat Pull Down</li>
+                    <li>Rows</li>
+                    <li>Seated Rows</li>
+                    <li>Bent Over Row</li>
+                    <li>Single Arm Row</li>
+                </ul>
+            </div>
+            <div class="box6 bx">
+                <h2>Biceps</h2>
+                <ul>
+                    <li>Chin Ups</li>
+                    <li>Dumbel Curls</li>
+                    <li>Barbel Curls</li>
+                    <li>Hammer Curls</li>
+                    <li>Concentration Curls</li>
+                    <li>Cable Curls</li>
+                </ul>
             </div>
         </div>
     </main>
