--- a/final_project.html
+++ b/final_project.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <title>A+ Fitness Home</title>
@@ -27,7 +27,7 @@
         <div class="hro">
             <img src="images/rlgmage.jpg" alt="gym">
         </div>
-        <div>
+        <div class="ye">
             <h2>Welcome To A+ Fitness!</h2>
             <p>So, you want to get into fitness, but don't know where to start? No Problem! Take a look around our website and you'll find everything you need! it's not as hard as you might think! Don't know what to do, when you get to the gym? Check out
                 our workouts section! Have a question? check out the FAQ page and see if there is an answer there!</p>
@@ -38,7 +38,7 @@
         <div class="hro">
             <img src="images/yeye.jpg" alt="more gym">
         </div>
-        <div>
+        <div class="ye">
             <h2>Some Basic Information</h2>
             <p>Getting into fitness can be intimidating. There are so many different components to consider. It can be hard to know if you are doing something wrong or right. One thing that is important to remember is that things won’t happen overnight.
                 It takes time, often a lot longer than expected to achieve our goals.</p>
