--- a/final_pro_calc.html
+++ b/final_pro_calc.html
@@ -3,9 +3,11 @@
 
 <head>
     <title>A+ Fitness Calculators</title>
-    <link rel="stylesheet" type="text/css" href="css/finalcss.css">
     <meta charset="utf-8">
-    <link href="https://fonts.googleapis.com/css2?family=Comic+Neue&family=Source+Sans+Pro&display=swap" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="A+ Fitness is here to help you achieve your goals, and become a better you by providing all the information you need to start, or continue on your journey!">
+    <link rel=" stylesheet " type="text/css " href="css/finalcss.css ">
+    <link href="https://fonts.googleapis.com/css2?family=Comic+Neue&family=Source+Sans+Pro&display=swap " rel="stylesheet ">
 </head>
 
 <body>
