--- a/final_project.html
+++ b/final_project.html
@@ -3,31 +3,33 @@
 
 <head>
     <title>A+ Fitness Home</title>
-    <link rel="stylesheet" type="text/css" href="css/finalcss.css">
     <meta charset="utf-8">
-    <link href="https://fonts.googleapis.com/css2?family=Comic+Neue&family=Source+Sans+Pro&display=swap" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="A+ Fitness is here to help you achieve your goals, and become a better you by providing all the information you need to start, or continue on your journey!">
+    <link rel=" stylesheet " type="text/css " href="css/finalcss.css ">
+    <link href="https://fonts.googleapis.com/css2?family=Comic+Neue&family=Source+Sans+Pro&display=swap " rel="stylesheet ">
 </head>
 
 <body>
     <header>
-        <div class="hd1">
-            <img src="images/logo.png" alt="Logo">
+        <div class="hd1 ">
+            <img src="images/logo.png " alt="Logo ">
             <h2>A+ Fitness</h2>
         </div>
-        <nav class="hd2">
+        <nav class="hd2 ">
             <ul>
-                <li><a href="final_project.html">Home</a></li>
-                <li><a href="final_pro_Work.html">Workouts</a></li>
-                <li><a href="final_pro_calc.html">Calculators</a></li>
-                <li><a href="final_pro_faq.html">FAQ</a></li>
+                <li><a href="final_project.html ">Home</a></li>
+                <li><a href="final_pro_Work.html ">Workouts</a></li>
+                <li><a href="final_pro_calc.html ">Calculators</a></li>
+                <li><a href="final_pro_faq.html ">FAQ</a></li>
             </ul>
         </nav>
     </header>
-    <div class="main">
-        <div class="hro">
-            <img src="images/rlgmage.jpg" alt="gym">
+    <div class="main ">
+        <div class="hro ">
+            <img src="images/rlgmage.jpg " alt="gym ">
         </div>
-        <div class="ye">
+        <div class="ye ">
             <h2>Welcome To A+ Fitness!</h2>
             <p>So, you want to get into fitness, but don't know where to start? No Problem! Take a look around our website and you'll find everything you need! it's not as hard as you might think! Don't know what to do, when you get to the gym? Check out
                 our workouts section! Have a question? check out the FAQ page and see if there is an answer there!</p>
@@ -35,10 +37,10 @@
             </p>
             <hr>
         </div>
-        <div class="hro">
-            <img src="images/yeye.jpg" alt="more gym">
+        <div class="hro ">
+            <img src="images/yeye.jpg " alt="more gym ">
         </div>
-        <div class="ye">
+        <div class="ye ">
             <h2>Some Basic Information</h2>
             <p>Getting into fitness can be intimidating. There are so many different components to consider. It can be hard to know if you are doing something wrong or right. One thing that is important to remember is that things won’t happen overnight.
                 It takes time, often a lot longer than expected to achieve our goals.</p>
@@ -51,10 +53,10 @@
         </div>
     </div>
     <footer>
-        <p class="con">Contact Us: <br> <img src="images/phone.png" alt="phone"> 777-777-7777 <br> <img src="images/email.png" alt="email"> A+Fitness@gmail.com</p>
-        <a class="conn" href="final-site-plan.html">Final Site Plan</a>
+        <p class="con ">Contact Us: <br> <img src="images/phone.png " alt="phone "> 777-777-7777 <br> <img src="images/email.png " alt="email "> A+Fitness@gmail.com</p>
+        <a class="conn " href="final-site-plan.html ">Final Site Plan</a>
         <hr>
-        <p class="copy">Copyright © 2020 A+ Fitness | All Rights Reserved | Privacy and Cookie Statement | Alan Wangsgard</p>
+        <p class="copy ">Copyright © 2020 A+ Fitness | All Rights Reserved | Privacy and Cookie Statement | Alan Wangsgard</p>
     </footer>
 </body>
 
